# BlueShark

./: .gitignore  .pylintrc  README.md  cSpell.json  data.json  main.py  pyproject.toml  readme.md  requirements.txt  run_example.py  setup.py  test.femm
application/femm/: install_femm.py
application/simulate/: femm_addons.py  femm_mi_addons.py  femm_mo_addons.py
blueshark/: __init__.py
blueshark/addons/: __init__.py  draw_bldc.py
blueshark/configs/: __init__.py  constant.py  constants.py
blueshark/domain/: __init__.py  (+2 more)
configs/: constants.py  tubular.yaml
data/: params.yaml  prototypeV0.yaml  tublur_motor.edge  tublur_motor.ele  tublur_motor.node  tublur_motor.poly  tubular.yaml
demos/: bldc_motor_test.py  draw_test.py  heat_flow_test.py  initalize_system_test.py  motor.yaml  mutliphysics_test.py  thermal_test.py  topology_test.py  transient_magnetic_test.py  transient_thermal_test.py  tubular_sim.py
docs/: placeholder.tex  user_manual.html
domain/: motor_generation.py  motor_physics.py
examples/: basic_analysis.py  deap_optimization.py  electromagnet.py  force_random_search.py  magnetic_coil.py  motor_deap_optimization.py  placeholder.py  simple_coilgun.py  tubular_analysis.py  tubular_motor.py  tubular_motor_params.yaml  tubular_rotational_example.py
models/: __init__.py  prototype_v0.py  tubular_motor.py
test/: mutliphysics_test.py  topology_test.py  transient_magnetic_test.py  transient_thermal_test.py
tests/: run_tests.py  unit_generation.py  unit_physics.py  unit_test_domain.py  unit_test_femm_addons.py
unit_tests/: runner.py
(+198 files in other folders)
