[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "blueshark"
version = "1.1.0"
description = "Modular FEMM-based linear and tubular motor simulation framework"
readme = "README.md"
requires-python = ">=3.8"
authors = [
  { name = "William Bowley", email = "wgrantbowley@gmail.com" }
]
license = { text = "MIT" }
dependencies = [
  "PyYAML",
  "pyfemm",
  "matplotlib",
  "deap"
]
keywords = ["FEMM", "linear motor", "tubular motor", "simulation", "optimization"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Intended Audience :: Developers",
  "Topic :: Scientific/Engineering",
]

[tool.setuptools.packages.find]
where = ["blueshark"]
